La til intro, med placeholder text
Endret også så ned knappen går til intro i stedet

--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
         <div id="forside">
             <a href="https://elvebakken.vgs.no/" id="elvebakken-logo" target="_blank"><img src="/assets/imgs/elvebakken-logo-hvit-e-2024-25.png" alt="Elvebakken-logo"></a>
             <h1>Elvebakken realfag</h1>
-            <div id="knapp"><a href="#fag-meny-område"></a></div>
+            <div id="knapp"><a href="#intro-område"></a></div>
         </div>
     </header>
     <main>
+        <div id="intro-område">
+            <p id="intro">Velkommen til Elvebakken realfag! Her kan du utforske de ulike programfagene vi tilbyr, og finne ut mer om hva som interesserer deg. Klikk på et programfag for å lese mer. Eller klikk på "Vis alle" for å se en oversikt over alle programfagene. Og enda bedre, kom på besøk til oss på Elvebakken og se hvordan det er å være elev hos oss! Dette er placeholder tekst, og vil bli erstattet med noe mer fornuftig senere.</p>
+        </div>
+
         <!-- meny over programfagene-->
         <div id="fag-meny-område">
             <div id="fag-meny-tittel">
