Begynte på programfag-side
Har begynt på layout og sånt til programfagsnettsidene

--- a/programfag/kjemi/kjemi.html
+++ b/programfag/kjemi/kjemi.html
@@ -3,15 +3,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/global.css">
+    <link rel="stylesheet" href="/style/global.css">
+    <link rel="stylesheet" href="/style/kjemi.css">
     <title>Kjemi</title>
 </head>
 <body>
     <header>
-        
+        <div id="forside-bilde">
+            <h1>Kjemi</h1>
+        </div>
     </header>
     <main>
+        <div id="intro-tekst">
+            <p>
+                Kjemi handler om stoffers og materialers oppbygning, egenskaper og reaksjoner. Faget skal gi 
+                elevene grunnlag for å kunne forstå og forklare vår fysiske verden, og innsikt i hvordan 
+                kjemikunnskaper bidrar til endringer i samfunnet. Kjemi skal bidra til innsikt i hvordan man 
+                kan løse ulike problemstillinger knyttet til f.eks teknologi, medisin, klimaendringer og energi.
+            </p>
+        </div>
+        <div id="fagnummer-knapper">
+            <a href="#fagnummer1">Kjemi 1</a>
+            <a href="#">Kjemi 2</a>
+        </div>
+        <div class="skillelinje"></div>
+        <div id="fagnummer1" class="fag-informasjon">
+            <h2>Kjemi 1</h2>
+            <div class="informasjonsbokser">
+                <div class="sentrale-temaer">
+                    <h3>Sentrale temaer</h3>
+                    <ul>
+                        <li>PRAKSISER OG TENKEMÅTER</li>
+                        <ul>
+                            <li>Hvordan hypoteser, teorier, metoder og modeller utvikles og brukes. Knyttet til eksperimenter og forsøk.</li>
+                        </ul>
+                        <li>KJEMISKE BINDINGER OG STRUKTURER</li>
+                        <ul>
+                            <li>Handler om krefter mellom partikler og hvordan disse har betydning for stoffers oppbygning, sammensetning og egenskaper.</li>
+                        </ul>
+                        <li>KJEMISKE REAKSJONER</li>
+                        <ul>
+                            <li>Hvordan og hvorfor stoffer reagerer.</li>
+                        </ul>
+                        <li>ANVENDT KJEMI</li>
+                        <ul>
+                            <li>Handler om å bruke kunnskaper i kjemi til å forstå virkningen av kjemiske stoffer og prosesser vi omgir oss med. Vurderinger knyttet til helse, miljø og sikkerhet er en del av dette.</li>
+                        </ul>
+                    </ul>
+                </div>
+                <div class="rask-oversikt">
+                    <h3>Rask oversikt</h3>
+                </div>
+                <div class="visuelt-element">
 
+                </div>
+                <div class="hvordan-jobber-vi">
+
+                </div>
+                <div class="avlangt-visuelt-element">
+
+                </div>
+                <div class="elev-sitat">
+
+                </div>
+                <div class="mer-informasjon">
+
+                </div>
+                <div class="interaktivt-element">
+
+                </div>
+            </div>
+        </div>
+        <div id="fagnummer2" class="fag-informasjon">
+
+        </div>
     </main>
 </body>
 </html>
