Endret navn på index
byttet navn fra kjemi til index

--- a/programfag/kjemi/index.html
+++ b/programfag/kjemi/index.html
@@ -53,6 +53,10 @@
                 </div>
                 <div class="rask-oversikt">
                     <h3>Rask oversikt</h3>
+                    <ul>
+                        <li>Realfagspoeng: 0.5</li>
+                        <li>Eksamensform: Muntlig-praktisk</li>
+                    </ul>
                 </div>
                 <div class="visuelt-element">
 
