Endret så noen navn ble riktig lengde

--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
                 </a>
                 <a href="programfag/s_matte/" class="fag_i_meny">
                     <img src="assets/imgs/placeholder_fysikk.png" alt="test bilde" class="fag_bilde">
-                    <p>S-Matte</p>
+                    <p>Matematikk-S</p>
                     <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="programfag/r_matte/" class="fag_i_meny">
                     <img src="assets/imgs/placeholder_fysikk.png" alt="test bilde" class="fag_bilde">
-                    <p>R-Matte</p>
+                    <p>Matematikk-R</p>
                     <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="programfag/kjemi/" class="fag_i_meny">
@@ -60,7 +60,7 @@
                 </a>
                 <a href="programfag/tekforsk/" class="fag_i_meny">
                     <img src="assets/imgs/placeholder_tekforsk.png" alt="test bilde" class="fag_bilde">
-                    <p>Tekforsk</p>
+                    <p>Teknologi og forskningslære</p>
                     <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="programfag/geofag/" class="fag_i_meny">
@@ -136,7 +136,7 @@
             <div class="fag-element">
                 <img src="assets/imgs/placeholder_geofag.png" class="fag-bilde">
                 <div class="fag-info">
-                    <h3 class="fag-tittel">S matte</h3>
+                    <h3 class="fag-tittel">Matematikk-S</h3>
                     <p class="fag-beskrivelse">Biologi på Elvebakken gir deg en dyp forståelse av levende organismer og deres miljø. Du vil lære om alt fra celler og genetikk til økologi og evolusjon.</p>
                     <p class="fag-sitat">"Steiner er sick da!" - Spes type 2STA</p>
                     <a class ="fag-se-mer-knapp" href="programfag/s_matte/">Se mer →</a>
@@ -144,7 +144,7 @@
             </div>
             <div class="fag-element">
                 <div class="fag-info">
-                    <h3 class="fag-tittel">R matte</h3>
+                    <h3 class="fag-tittel">Matematikk-R</h3>
                     <p class="fag-beskrivelse">Biologi på Elvebakken gir deg en dyp forståelse av levende organismer og deres miljø. Du vil lære om alt fra celler og genetikk til økologi og evolusjon.</p>
                     <p class="fag-sitat">"Steiner er sick da!" - Spes type 2STA</p>
                     <a class ="fag-se-mer-knapp" href="programfag/r_matte/">Se mer →</a>
