La til en tilbakeknapp med simpel css som må justeres

--- a/programfag/kjemi/index.html
+++ b/programfag/kjemi/index.html
@@ -11,6 +11,7 @@
     <header>
         <div id="forside-bilde">
             <h1>Kjemi</h1>
+            <a href="../../" id="tilbake-knapp">&lt; tilbake til programfag</a>
         </div>
     </header>
     <main>
