--- a/index.html
+++ b/index.html
@@ -153,6 +153,11 @@
             </div>
         </div>
     </main>
+    <footer>
+        <img src="assets/imgs/elvebakken-logo-hvit-e-2024-25.png" id="footer-logo">
+        <h3>Elvebakken VGS | Vestre Elvebakke 3, 0182</h3>
+        <a href="#">Tilbake til toppen</a>
+    </footer>
     <script src="./script/global.js"></script>
 </body>
 </html>
