Gjorde ferdig utforming av tilbakeknappen og la til kommentarer på den delen

--- a/programfag/kjemi/index.html
+++ b/programfag/kjemi/index.html
@@ -11,7 +11,8 @@
     <header>
         <div id="forside-bilde">
             <h1>Kjemi</h1>
-            <a href="../../" id="tilbake-knapp">&lt; tilbake til programfag</a>
+            <!-- knapp tilbake til realfagssiden -->
+            <a href="/" id="tilbake-knapp">&lt; Tilbake til programfag</a>
         </div>
     </header>
     <main>
