Fungerende footer på alle sider
Footern kommer fra en felles footer.html fil under widgets som man kan endre på om man vil endre footeren

--- a/index.html
+++ b/index.html
@@ -153,11 +153,10 @@
             </div>
         </div>
     </main>
-    <footer>
-        <img src="assets/imgs/elvebakken-logo-hvit-e-2024-25.png" id="footer-logo">
-        <h3>Elvebakken VGS | Vestre Elvebakke 3, 0182</h3>
-        <a href="#">Tilbake til toppen</a>
-    </footer>
+    <!-- Footer -->
+    <div id="footer-placeholder"></div>
+    <script src="./script/footer.js"></script>
+    
     <script src="./script/global.js"></script>
 </body>
 </html>
