--- a/programfag/geofag/index.html
+++ b/programfag/geofag/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/global.css">
+    <link rel="stylesheet" href="/style/global.css">
     <title>Geofag</title>
 </head>
 <body>
@@ -13,5 +13,8 @@
     <main>
 
     </main>
+    <!-- Footer -->
+    <div id="footer-placeholder"></div>
+    <script src="/script/footer.js"></script>
 </body>
 </html>
