--- a/programfag/kjemi/index.html
+++ b/programfag/kjemi/index.html
@@ -112,5 +112,8 @@
 
         </div>
     </main>
+    <!-- Footer -->
+    <div id="footer-placeholder"></div>
+    <script src="/script/footer.js"></script>
 </body>
 </html>
