La til farger og lenker
la til flere fargevariabler og mer informasjon

--- a/programfag/kjemi/index.html
+++ b/programfag/kjemi/index.html
@@ -101,8 +101,10 @@
                     </p>
                 </div>
                 <div class="mer-informasjon">
-                    <h3>Annen info</h3>
-
+                    <h3>Aktuelle lenker</h3>
+                    <li><a href="https://snl.no/kjemi" target="_blank">Mer om faget</a></li>
+                    <li>Eksamensform: Muntlig-praktisk</li>
+                    <li>Bygger på andre fag: Nei</li>
                 </div>
                 <div class="interaktivt-element">
 
