Kommenterte og fikset kjemi-side
la til flere bokser og sånt

--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 </head>
 <body>
     <header>
+        <!-- forside når man åpner nettsiden, bakgrunnsbide endres i css -->
         <div id="forside">
             <a href="https://elvebakken.vgs.no/" id="elvebakken-logo" target="_blank"><img src="/assets/imgs/elvebakken-logo-hvit-e-2024-25.png" alt="Elvebakken-logo"></a>
             <h1>Elvebakken realfag</h1>
-            <div id="knapp"><a href="#intro-område"></a></div>
+            <div id="ned-knapp"><a href="#intro-område"></a></div>
         </div>
     </header>
     <main>
+        <!-- informerende tekst som introduserer "programfagstypen" -->
         <div id="intro-område">
             <p id="intro">Velkommen til Elvebakken realfag! Her kan du utforske de ulike programfagene vi tilbyr, og finne ut mer om hva som interesserer deg. Klikk på et programfag for å lese mer. Eller klikk på "Vis alle" for å se en oversikt over alle programfagene. Og enda bedre, kom på besøk til oss på Elvebakken og se hvordan det er å være elev hos oss! Dette er placeholder tekst, og vil bli erstattet med noe mer fornuftig senere.</p>
         </div>
@@ -26,6 +28,7 @@
                 <h1>Programfag</h1>
                 <p id="vis-alle">Vis alle ></p>
             </div>
+
             <div id="fag_meny">
                 <!-- om antall fag endres, må også css endres (grid_template_columns) -->
                 <a href="programfag/informasjonsteknologi/" class="fag_i_meny">
@@ -136,7 +139,7 @@
             <div class="fag-element">
                 <img src="assets/imgs/placeholder_geofag.png" class="fag-bilde">
                 <div class="fag-info">
-                    <h3 class="fag-tittel">Matematikk-S</h3>
+                    <h3 class="fag-tittel">Matematikk - S</h3>
                     <p class="fag-beskrivelse">Biologi på Elvebakken gir deg en dyp forståelse av levende organismer og deres miljø. Du vil lære om alt fra celler og genetikk til økologi og evolusjon.</p>
                     <p class="fag-sitat">"Steiner er sick da!" - Spes type 2STA</p>
                     <a class ="fag-se-mer-knapp" href="programfag/s_matte/">Se mer →</a>
@@ -144,7 +147,7 @@
             </div>
             <div class="fag-element">
                 <div class="fag-info">
-                    <h3 class="fag-tittel">Matematikk-R</h3>
+                    <h3 class="fag-tittel">Matematikk - R</h3>
                     <p class="fag-beskrivelse">Biologi på Elvebakken gir deg en dyp forståelse av levende organismer og deres miljø. Du vil lære om alt fra celler og genetikk til økologi og evolusjon.</p>
                     <p class="fag-sitat">"Steiner er sick da!" - Spes type 2STA</p>
                     <a class ="fag-se-mer-knapp" href="programfag/r_matte/">Se mer →</a>
