--- a/programfag/kjemi/index.html
+++ b/programfag/kjemi/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+        <!-- toppseksjon av siden med et bakgrunnsbilde som kan endres i kjemi.css-dokumentet -->
         <div id="forside-bilde">
             <h1>Kjemi</h1>
             <!-- knapp tilbake til realfagssiden -->
@@ -16,6 +17,7 @@
         </div>
     </header>
     <main>
+        <!-- kort informerende tekst om programfaget -->
         <div id="intro-tekst">
             <p>
                 Kjemi handler om stoffers og materialers oppbygning, egenskaper og reaksjoner. Faget skal gi 
@@ -24,11 +26,14 @@
                 kan løse ulike problemstillinger knyttet til f.eks teknologi, medisin, klimaendringer og energi.
             </p>
         </div>
+        <!-- knapper som tar deg direkte til seksjonene for de ulike "nivåene" av programfaget -->
         <div id="fagnummer-knapper">
             <a href="#fagnummer1">Kjemi 1</a>
-            <a href="#">Kjemi 2</a>
+            <a href="#fagnummer2">Kjemi 2</a>
         </div>
+        <!-- bølgete linje -->
         <div class="skillelinje"></div>
+        <!-- informasjon om programfaget -->
         <div id="fagnummer1" class="fag-informasjon">
             <h2>Kjemi 1</h2>
             <div class="informasjonsbokser">
@@ -81,6 +86,7 @@
                         vise eksempler på hvordan teorien brukes i praksis f.eks. innen medisin eller miljø.
                     </p>
                 </div>
+                <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
                     <img src="../../assets/imgs/placeholder_kjemi.png" alt="Person som driver med kjemi">
                     <img src="../../assets/imgs/placeholder_kjemi.png" alt="Person som driver med kjemi">
@@ -102,21 +108,105 @@
                 </div>
                 <div class="mer-informasjon">
                     <h3>Aktuelle lenker</h3>
-                    <li><a href="https://snl.no/kjemi" target="_blank">Mer om faget</a></li>
-                    <li>Eksamensform: Muntlig-praktisk</li>
-                    <li>Bygger på andre fag: Nei</li>
+                    <li><a href="https://snl.no/kjemi" target="_blank">Les mer på SNL</a></li>
+                    <li><a href="https://www.udir.no/lk20/kje01-02" target="_blank">Læreplan</a></li>
+                </div>
+                <!-- legg til interaktivt element her -->
+                <div class="interaktivt-element">
+
+                </div>
+            </div>
+        </div>
+        <!-- bølgete linje -->
+        <div class="skillelinje"></div>
+        <!-- informasjon om [programfag] 2 -->
+        <div id="fagnummer2" class="fag-informasjon">
+            <h2>Kjemi 2</h2>
+            <div class="informasjonsbokser">
+                <div class="sentrale-temaer">
+                    <h3>Sentrale temaer</h3>
+                    <ul>
+                        <li>BUFFERE</li>
+                        <ul>
+                            <li>Vi ser på blandinger av svake syrer og baser som kan danne løsninger som stabiliserer pH.</li>
+                        </ul>
+                        <li>ORGANISK KJEMI</li>
+                        <ul>
+                            <li>Vi fortsetter med mer kompliserte organiske forbindelser og ser på stoffgruppenes reaksjoner. Vi ser også på hvordan man kan syntetisere organiske forbindelser, og separere dem.</li>
+                        </ul>
+                        <li>REDOKSREAKSJONER OG ELEKTROKJEMI</li>
+                        <ul>
+                            <li>Her handler det om strøm og kjemiske reaksjoner. Vi ser blant annet på batterier og elektrolyse.</li>
+                        </ul>
+                        <li>GRØNN KJEMI</li>
+                        <ul>
+                            <li>Eksempler på produksjon, gjenvinning, deponering og nedbrytning av metaller og plast.</li>
+                        </ul>
+                    </ul>
+                </div>
+                <div class="rask-oversikt">
+                    <h3>Rask oversikt</h3>
+                    <li>Realfagspoeng: 0.5</li>
+                    <li>Eksamensform: Skriftlig og muntlig-praktisk</li>
+                    <li>Bygger på andre fag: Ja, kjemi 1</li>
+                </div>
+                <div class="visuelt-element">
+
+                </div>
+                <div class="hvordan-jobber-vi">
+                    <h3>Hvordan jobber vi?</h3>
+                    <p>
+                        I faget Kjemi 2 veksler undervisningen mellom forelesninger, laboratoriearbeid, og 
+                        diskusjoner.
+                    </p>
+                    <p>
+                        Elevenes fagkunnskaper blir i stor grad vurdert i skriftlige prøver. Elevene kan komme 
+                        opp i muntlig/praktisk og skriftlig eksamen. Det betyr at det blir avholdt heldagsprøve 
+                        i kjemi 2. 
+                    </p>
+                    <p>
+                        Faget er en viktig “døråpner” for medisinske fag, og tar fatt i mange nyttige og 
+                        interessante (og kanskje utfordrende) temaer som er viktige i biologiske og tekniske fag. 
+                    </p>
+                </div>
+                <div class="avlangt-visuelt-element">
+                    <img src="../../assets/imgs/placeholder_kjemi.png" alt="Person som driver med kjemi">
+                    <img src="../../assets/imgs/placeholder_kjemi.png" alt="Person som driver med kjemi">
+                </div>
+                <div class="elev-sitat">
+                    <h3>Hva mener elevene?</h3>
+                    <p>
+                        <i>
+                            "Kjemi er et spennende fag, med mye utfordringer. Det som er bra med faget er at man 
+                            får nyttig kunnskap, samtidig som at det er preget av mye praktisk arbeid hvor du kan 
+                            se selv hva som faktisk skjer og ikke bare lese om det. Dermed blir det ikke like 
+                            kjedelig og man får økt forståelse for faget."
+                        </i>
+                    </p>
+                    <p>
+                        - Tidligere elev
+                    </p>
+                </div>
+                <div class="mer-informasjon">
+                    <h3>Aktuelle lenker</h3>
+                    <li><a href="https://snl.no/kjemi" target="_blank">Les mer på SNL</a></li>
+                    <li><a href="https://www.udir.no/lk20/kje01-02" target="_blank">Læreplan</a></li>
                 </div>
                 <div class="interaktivt-element">
 
                 </div>
             </div>
         </div>
-        <div id="fagnummer2" class="fag-informasjon">
-
+        <!-- bølgete linje -->
+        <div class="skillelinje" id="bølge"></div>
+        <!-- legg til flere prosjekter her -->
+        <div class="flere-prosjekter">
+            <h3>Flere prosjekter</h3>
         </div>
     </main>
     <!-- Footer -->
     <div id="footer-placeholder"></div>
     <script src="/script/footer.js"></script>
+    <script src="/script/global.js"></script>
 </body>
 </html>
