--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <header>
         <!-- forside når man åpner nettsiden, bakgrunnsbide endres i css -->
         <div id="forside">
-            <a href="https://elvebakken.vgs.no/" id="elvebakken-logo" target="_blank"><img src="/assets/imgs/elvebakken-logo-hvit-e-2024-25.png" alt="Elvebakken-logo"></a>
+            <a href="https://elvebakken.vgs.no/" id="elvebakken-logo" target="_blank"><div class = "logo-bg"><img src="/assets/imgs/elvebakken-logo-hvit-e-2024-25.png" alt="Elvebakken-logo"></div></a>
+            
             <h1>Elvebakken realfag</h1>
             <div id="ned-knapp"><a href="#intro-område"></a></div>
         </div>
