Knapp med sick bakgrunn

--- a/programfag/kjemi/index.html
+++ b/programfag/kjemi/index.html
@@ -28,8 +28,8 @@
         </div>
         <!-- knapper som tar deg direkte til seksjonene for de ulike "nivåene" av programfaget -->
         <div id="fagnummer-knapper">
-            <a href="#fagnummer1">Kjemi 1</a>
-            <a href="#fagnummer2">Kjemi 2</a>
+            <a href="#fagnummer1" id = "første-fag">Kjemi 1</a>
+            <a href="#fagnummer2" id = "andre-fag">Kjemi 2</a>
         </div>
         <!-- bølgete linje -->
         <div class="skillelinje"></div>
