versågod såndee, la til sånn spill divider

--- a/programfag/kjemi/index.html
+++ b/programfag/kjemi/index.html
@@ -112,8 +112,11 @@
                     <li><a href="https://www.udir.no/lk20/kje01-02" target="_blank">Læreplan</a></li>
                 </div>
                 <!-- legg til interaktivt element her -->
+                <div class="divider-element">
+                    
+                </div>
                 <div class="interaktivt-element">
-
+                    Det kule området med fete GAMES for ekte GAMERS. Og mye br for å gjøre dette elemntet større. <br><b<br>r><br><br><br><br><br><br><br><br><br><br><br><br><br><br> Br go brrrrr <br><br>
                 </div>
             </div>
         </div>
@@ -192,8 +195,11 @@
                     <li><a href="https://snl.no/kjemi" target="_blank">Les mer på SNL</a></li>
                     <li><a href="https://www.udir.no/lk20/kje01-02" target="_blank">Læreplan</a></li>
                 </div>
+                <div class="divider-element">
+                    
+                </div>
                 <div class="interaktivt-element">
-
+                    Det andre kule området med fete GAMES for ekte GAMERS. Og mye br for å gjøre dette elemntet større. <br><b<br>r><br><br><br><br><br><br><br><br><br><br><br><br><br><br> Br go brrrrr <br><br>
                 </div>
             </div>
         </div>
