Oppdatert fysikk og flyttet css til listen over sentrale temaer til kjemi.css

--- a/programfag/fysikk/index.html
+++ b/programfag/fysikk/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style/global.css">
-    <link rel="stylesheet" href="/style/kjemi.css">
-    <title>Kjemi</title>
+    <link rel="stylesheet" href="/style/fysikk.css">
+    <link rel="stylesheet" href="/style/programfag.css">
+    <title>Fysikk</title>
 </head>
 <body>
     <header>
@@ -20,16 +21,15 @@
         <!-- kort informerende tekst om programfaget -->
         <div id="intro-tekst">
             <p>
-                Kjemi handler om stoffers og materialers oppbygning, egenskaper og reaksjoner. Faget skal gi 
-                elevene grunnlag for å kunne forstå og forklare vår fysiske verden, og innsikt i hvordan 
-                kjemikunnskaper bidrar til endringer i samfunnet. Kjemi skal bidra til innsikt i hvordan man 
-                kan løse ulike problemstillinger knyttet til f.eks teknologi, medisin, klimaendringer og energi.
+                Fysikk på VGS gir grunnleggende innsikt i fysikkens lover. Temaene er blant annet 
+                mekanikk, energi, elektrisitet og lys. Dette er et viktig grunnlag for videre studier 
+                i naturvitenskapene.
             </p>
         </div>
         <!-- knapper som tar deg direkte til seksjonene for de ulike "nivåene" av programfaget -->
         <div id="fagnummer-knapper">
-            <a href="#fagnummer1" id = "første-fag">Kjemi 1</a>
-            <a href="#fagnummer2" id = "andre-fag">Kjemi 2</a>
+            <a href="#fagnummer1" id = "første-fag">Fysikk 1</a>
+            <a href="#fagnummer2" id = "andre-fag">Fysikk 2</a>
         </div>
         <!-- bølgete linje -->
         <div class="skillelinje"></div>
@@ -40,22 +40,16 @@
                 <div class="sentrale-temaer">
                     <h3>Sentrale temaer</h3>
                     <ul>
-                        <li>PRAKSISER OG TENKEMÅTER</li>
-                        <ul>
-                            <li>Hvordan hypoteser, teorier, metoder og modeller utvikles og brukes. Knyttet til eksperimenter og forsøk.</li>
-                        </ul>
-                        <li>KJEMISKE BINDINGER OG STRUKTURER</li>
-                        <ul>
-                            <li>Handler om krefter mellom partikler og hvordan disse har betydning for stoffers oppbygning, sammensetning og egenskaper.</li>
-                        </ul>
-                        <li>KJEMISKE REAKSJONER</li>
-                        <ul>
-                            <li>Hvordan og hvorfor stoffer reagerer.</li>
-                        </ul>
-                        <li>ANVENDT KJEMI</li>
-                        <ul>
-                            <li>Handler om å bruke kunnskaper i kjemi til å forstå virkningen av kjemiske stoffer og prosesser vi omgir oss med. Vurderinger knyttet til helse, miljø og sikkerhet er en del av dette.</li>
-                        </ul>
+                        <li>Bevegelseslikninger</li>
+                        <li>Newtons lover</li>
+                        <li>Bevegelsesmengde</li>
+                        <li>Bølger og stråling</li>
+                        <li>Energi</li>
+                        <li>Atom- og kjernefysikk</li>
+                        <li>Termofysikk</li>
+                        <li>Astrofysikk</li>
+                        <li>Klimafysikk</li>
+                        <li>Elektrisitet</li>
                     </ul>
                 </div>
                 <div class="rask-oversikt">
@@ -70,20 +64,20 @@
                 <div class="hvordan-jobber-vi">
                     <h3>Hvordan jobber vi?</h3>
                     <p>
-                        I faget kjemi veksler undervisningen mellom forelesninger, laboratoriearbeid og 
-                        oppgaveløsning. Det er viktig å knytte de teoretiske fagkunnskapene til de praktiske 
-                        forsøkene vi gjør på laboratoriet, så rapportskriving er en sentral og nyttig arbeidsform.
+                        For å utnytte mulighetene som er tilgjengelige for oss, er vi avhengige av at 
+                        vi forstår hvordan verden henger sammen. Det er det vi jobber mot i fysikkfaget. 
+                        Vi ser på helt dagligdagse fenomener og prøver å forklare hvorfor verden er som 
+                        den er. Hvorfor er himmelen blå? Hvorfor faller gjenstander ned når man kaster 
+                        dem opp i lufta? Hvorfor faller ikke månen ned på jorda, den er da påvirket av 
+                        tyngdekraft den også? Hva er egentlig elektrisk strøm?
                     </p>
                     <p>
-                        Elevenes fagkunnskaper blir i stor grad vurdert i skriftlige prøver og rapporter fra 
-                        elevforsøk. Eksamensformen i kjemi 1 er muntlig-praktisk, derfor øver vi også på 
-                        muntlige fremføringer av fagstoff med flere små og noen større muntlige 
-                        vurderingssituasjoner i løpet av skoleåret. Det elevene lærer i kjemi 1 er sentralt 
-                        også i kjemi 2, og elevene vil få smakebiter på hva som forventes av dem til neste år. 
-                    </p>
-                    <p>
-                        For å vise at faget har tilknytning til mange ulike fagområder, legges det vekt på å 
-                        vise eksempler på hvordan teorien brukes i praksis f.eks. innen medisin eller miljø.
+                        Alt dette og mye mer får du svar på ved å velge fysikk på videregående. I timene 
+                        har vi gjennomgang og jobber mye med oppgaver. Vi forsøker også å gjenskape 
+                        verden i liten skala med eksperimenter hvor vi tester ut teorien vi lærer i 
+                        timene. Merkelig nok er det slik at etter hvert som man forstår mer av hvordan 
+                        verden fungerer, så framstår den bare som enda mer mystisk, forunderlig og 
+                        fantastisk. 
                     </p>
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
