Gjorde rask oversikt fontsize litt større og endret så de har svaret i bold

--- a/programfag/kjemi/index.html
+++ b/programfag/kjemi/index.html
@@ -61,9 +61,9 @@
                 </div>
                 <div class="rask-oversikt">
                     <h3>Rask oversikt</h3>
-                    <li>Realfagspoeng: 0.5</li>
-                    <li>Eksamensform: Muntlig-praktisk</li>
-                    <li>Bygger på andre fag: Nei</li>
+                    <li>Realfagspoeng: <b>0.5</b></li>
+                    <li>Eksamensform: <b>Muntlig-praktisk</b></li>
+                    <li>Bygger på andre fag: <b>Nei</b></li>
                 </div>
                 <div class="visuelt-element">
 
@@ -150,9 +150,9 @@
                 </div>
                 <div class="rask-oversikt">
                     <h3>Rask oversikt</h3>
-                    <li>Realfagspoeng: 0.5</li>
-                    <li>Eksamensform: Skriftlig og muntlig-praktisk</li>
-                    <li>Bygger på andre fag: Ja, kjemi 1</li>
+                    <li>Realfagspoeng: <b>0.5</b></li>
+                    <li>Eksamensform: <b>Skriftlig og muntlig-praktisk</b></li>
+                    <li>Bygger på andre fag: <b>Ja, kjemi 1</b></li>
                 </div>
                 <div class="visuelt-element">
 
