--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/global.css">
     <link rel="stylesheet" href="style/forside.css">
+    <link rel="icon" href="/assets/icons/favicon.png" type="image/png">
     <title>Elvebakken Realfag</title>
 </head>
 <body>
     <header>
         <!-- forside når man åpner nettsiden, bakgrunnsbide endres i css -->
         <div id="forside">
-            <a href="https://elvebakken.vgs.no/" id="elvebakken-logo" target="_blank"><img src="/assets/imgs/elvebakken-logo-hvit-e-med-sirkel-2024-25.png" alt="Elvebakken-logo"></a>
+            <a href="https://elvebakken.vgs.no/" id="elvebakken-logo" target="_blank"><img src="/assets/imgs/elvebakken_logo/hvit_sirkel_bakgrunn.png" alt="Elvebakken-logo"></a>
             
             <h1>Elvebakken realfag</h1>
             <div id="ned-knapp"><a href="#intro-område"></a></div>
@@ -35,42 +36,42 @@
                 <a href="programfag/informasjonsteknologi/" class="fag_i_meny">
                     <img src="assets/imgs/placeholder_IT.png" alt="test bilde" class="fag_bilde">
                     <p>Informasjonsteknologi</p>
-                    <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
+                    <img src="assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="programfag/fysikk/" class="fag_i_meny">
                     <img src="assets/imgs/placeholder_fysikk.png" alt="test bilde" class="fag_bilde">
                     <p>Fysikk</p>
-                    <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
+                    <img src="assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="programfag/biologi/" class="fag_i_meny">
                     <img src="assets/imgs/placeholder_biologi.png" alt="test bilde" class="fag_bilde">
                     <p>Biologi</p>
-                    <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
+                    <img src="assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="programfag/s_matte/" class="fag_i_meny">
                     <img src="assets/imgs/placeholder_fysikk.png" alt="test bilde" class="fag_bilde">
                     <p>Matematikk-S</p>
-                    <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
+                    <img src="assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="programfag/r_matte/" class="fag_i_meny">
                     <img src="assets/imgs/placeholder_fysikk.png" alt="test bilde" class="fag_bilde">
                     <p>Matematikk-R</p>
-                    <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
+                    <img src="assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="programfag/kjemi/" class="fag_i_meny">
                     <img src="assets/imgs/placeholder_kjemi.png" alt="test bilde" class="fag_bilde">
                     <p>Kjemi</p>
-                    <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
+                    <img src="assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="programfag/tekforsk/" class="fag_i_meny">
                     <img src="assets/imgs/placeholder_tekforsk.png" alt="test bilde" class="fag_bilde">
                     <p>Teknologi og forskningslære</p>
-                    <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
+                    <img src="assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="programfag/geofag/" class="fag_i_meny">
                     <img src="assets/imgs/placeholder_geofag.png" alt="test bilde" class="fag_bilde">
                     <p>Geofag</p>
-                    <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
+                    <img src="assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <button id="venstre_bla_knapp" class="bla_knapp" onclick="flyttMeny('venstre')"></button>
                 <button id="høyre_bla_knapp" class="bla_knapp" onclick="flyttMeny('høyre')"></button>
