--- a/index.html
+++ b/index.html
@@ -34,42 +34,42 @@
             <div id="fag_meny">
                 <!-- om antall fag endres, må også css endres (grid_template_columns) -->
                 <a href="programfag/informasjonsteknologi/" class="fag_i_meny">
-                    <img src="assets/imgs/placeholder_IT.png" alt="test bilde" class="fagmeny_bilde">
+                    <img src="assets/imgs/informasjonsteknologi/placeholder_IT.png" alt="test bilde" class="fagmeny_bilde">
                     <p>Informasjonsteknologi</p>
                     <img src="assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="programfag/fysikk/" class="fag_i_meny">
-                    <img src="assets/imgs/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
+                    <img src="assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
                     <p>Fysikk</p>
                     <img src="assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="programfag/biologi/" class="fag_i_meny">
-                    <img src="assets/imgs/placeholder_biologi.png" alt="test bilde" class="fagmeny_bilde">
+                    <img src="assets/imgs/biologi/placeholder_biologi.png" alt="test bilde" class="fagmeny_bilde">
                     <p>Biologi</p>
                     <img src="assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="programfag/s_matte/" class="fag_i_meny">
-                    <img src="assets/imgs/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
+                    <img src="assets/imgs/matte_s/matte_s_placeholder.png" alt="test bilde" class="fagmeny_bilde">
                     <p>Matematikk-S</p>
                     <img src="assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="programfag/r_matte/" class="fag_i_meny">
-                    <img src="assets/imgs/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
+                    <img src="assets/imgs/matte_r/matte_r_placeholder.png" alt="test bilde" class="fagmeny_bilde">
                     <p>Matematikk-R</p>
                     <img src="assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="programfag/kjemi/" class="fag_i_meny">
-                    <img src="/assets/imgs/labbilde.png" alt="test bilde" class="fagmeny_bilde">
+                    <img src="/assets/imgs/kjemi/labbilde.png" alt="test bilde" class="fagmeny_bilde">
                     <p>Kjemi</p>
                     <img src="assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="programfag/tekforsk/" class="fag_i_meny">
-                    <img src="assets/imgs/placeholder_tekforsk.png" alt="test bilde" class="fagmeny_bilde">
+                    <img src="assets/imgs/teknologi_og_forskningslære/placeholder_tekforsk.png" alt="test bilde" class="fagmeny_bilde">
                     <p>Teknologi og forskningslære</p>
                     <img src="assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="programfag/geofag/" class="fag_i_meny">
-                    <img src="assets/imgs/placeholder_geofag.png" alt="test bilde" class="fagmeny_bilde">
+                    <img src="assets/imgs/geofag/placeholder_geofag.png" alt="test bilde" class="fagmeny_bilde">
                     <p>Geofag</p>
                     <img src="assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
@@ -84,7 +84,7 @@
         <div id="fag-oversikt">
             <div class = "fag-element">
                 <!-- Om bilde skal endres endre dettee bilde elementet.-->
-                <img src="assets/imgs/placeholder_IT.png" class="fag-bilde">
+                <img src="assets/imgs/informasjonsteknologi/placeholder_IT.png" class="fag-bilde">
                 <div class = "fag-info">
                     <!-- Endre info/tittel her -->
                     <h3 class="fag-tittel">IT</h3>
@@ -100,10 +100,10 @@
                     <p class="fag-sitat">"Fysikk er magi som fungerer!" - Dope Dame 3KDA</p>
                     <a class ="fag-se-mer-knapp" href="programfag/fysikk/">Se mer →</a>
                 </div>
-                <img src="assets/imgs/placeholder_fysikk.png" class="fag-bilde">
+                <img src="assets/imgs/fysikk/placeholder_fysikk.png" class="fag-bilde">
             </div>
             <div class="fag-element">
-                <img src="/assets/imgs/labbilde.png" class="fag-bilde">
+                <img src="/assets/imgs/kjemi/labbilde.png" class="fag-bilde">
                 <div class="fag-info">
                     <h3 class="fag-tittel">Kjemi</h3>
                     <p class="fag-beskrivelse">Kjemi på Elvebakken dekker alt fra grunnleggende kjemiske reaksjoner til avanserte laboratorieteknikker. Du vil lære om stoffenes egenskaper og hvordan de interagerer med hverandre.</p>
@@ -118,10 +118,10 @@
                     <p class="fag-sitat">"Biologi er livets vitenskap!" - Smart Elev 2STA</p>
                     <a class ="fag-se-mer-knapp" href="programfag/biologi/">Se mer →</a>
                 </div>
-                <img src="assets/imgs/placeholder_biologi.png" class="fag-bilde">
+                <img src="assets/imgs/biologi/placeholder_biologi.png" class="fag-bilde">
             </div>
             <div class="fag-element">
-                <img src="assets/imgs/placeholder_tekforsk.png" class="fag-bilde">
+                <img src="assets/imgs/teknologi_og_forskningslære/placeholder_tekforsk.png" class="fag-bilde">
                 <div class="fag-info">
                     <h3 class="fag-tittel">Teknologi og forskningslære</h3>
                     <p class="fag-beskrivelse">Biologi på Elvebakken gir deg en dyp forståelse av levende organismer og deres miljø. Du vil lære om alt fra celler og genetikk til økologi og evolusjon.</p>
@@ -136,10 +136,10 @@
                     <p class="fag-sitat">"Steiner er sick da!" - Spes type 2STA</p>
                     <a class ="fag-se-mer-knapp" href="programfag/geofag/">Se mer →</a>
                 </div>
-                <img src="assets/imgs/placeholder_geofag.png" class="fag-bilde">
+                <img src="assets/imgs/geofag/placeholder_geofag.png" class="fag-bilde">
             </div>
             <div class="fag-element">
-                <img src="assets/imgs/placeholder_geofag.png" class="fag-bilde">
+                <img src="assets/imgs/matte_s/matte_s_placeholder.png" class="fag-bilde">
                 <div class="fag-info">
                     <h3 class="fag-tittel">Matematikk - S</h3>
                     <p class="fag-beskrivelse">Biologi på Elvebakken gir deg en dyp forståelse av levende organismer og deres miljø. Du vil lære om alt fra celler og genetikk til økologi og evolusjon.</p>
@@ -154,7 +154,7 @@
                     <p class="fag-sitat">"Steiner er sick da!" - Spes type 2STA</p>
                     <a class ="fag-se-mer-knapp" href="programfag/r_matte/">Se mer →</a>
                 </div>
-                <img src="assets/imgs/placeholder_geofag.png" class="fag-bilde">
+                <img src="assets/imgs/matte_r/matte_r_placeholder.png" class="fag-bilde">
             </div>
         </div>
     </main>
