La til enda flere bilder
Ting er ikke like hyggelige lenger

--- a/programfag/kjemi/index.html
+++ b/programfag/kjemi/index.html
@@ -89,7 +89,7 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/placeholder_kjemi.png" alt="Person som driver med kjemi">
+                    <img src="../../assets/imgs/atomikon.png" alt="Person som driver med kjemi">
                     <img src="../../assets/imgs/placeholder_kjemi.png" alt="Person som driver med kjemi">
                 </div>
                 <div class="elev-sitat">
