--- a/programfag/fysikk/index.html
+++ b/programfag/fysikk/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/style/global.css">
     <link rel="stylesheet" href="/style/fysikk.css">
     <link rel="stylesheet" href="/style/programfag.css">
+    <link rel="icon" href="/assets/icons/favicon.png" type="image/png">
     <title>Fysikk</title>
 </head>
 <body>
