--- a/programfag/kjemi/index.html
+++ b/programfag/kjemi/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/style/global.css">
     <link rel="stylesheet" href="/style/kjemi.css">
     <link rel="stylesheet" href="/style/programfag.css">
+    <link rel="icon" href="/assets/icons/favicon.png" type="image/png">
     <title>Kjemi</title>
 </head>
 <body>
