Fikset bilder og tekst på kjemi, biologi og geofag-sidene
(Tenk å ikke være ferdig ennå)

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <img src="assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="programfag/biologi/" class="fag_i_meny">
-                    <img src="assets/imgs/biologi/placeholder_biologi.png" alt="test bilde" class="fagmeny_bilde">
+                    <img src="assets/imgs/biologi/dna_grønn.png" alt="test bilde" class="fagmeny_bilde">
                     <p>Biologi</p>
                     <img src="assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
@@ -69,7 +69,7 @@
                     <img src="assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="programfag/geofag/" class="fag_i_meny">
-                    <img src="assets/imgs/geofag/placeholder_geofag.png" alt="test bilde" class="fagmeny_bilde">
+                    <img src="assets/imgs/geofag/strand.png" alt="test bilde" class="fagmeny_bilde">
                     <p>Geofag</p>
                     <img src="assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
@@ -118,7 +118,7 @@
                     <p class="fag-sitat">"Biologi er livets vitenskap!" - Smart Elev 2STA</p>
                     <a class ="fag-se-mer-knapp" href="programfag/biologi/">Se mer →</a>
                 </div>
-                <img src="assets/imgs/biologi/placeholder_biologi.png" class="fag-bilde">
+                <img src="assets/imgs/biologi/dna_grønn.png" class="fag-bilde">
             </div>
             <div class="fag-element">
                 <img src="assets/imgs/teknologi_og_forskningslære/placeholder_tekforsk.png" class="fag-bilde">
@@ -136,7 +136,7 @@
                     <p class="fag-sitat">"Steiner er sick da!" - Spes type 2STA</p>
                     <a class ="fag-se-mer-knapp" href="programfag/geofag/">Se mer →</a>
                 </div>
-                <img src="assets/imgs/geofag/placeholder_geofag.png" class="fag-bilde">
+                <img src="assets/imgs/geofag/strand.png" class="fag-bilde">
             </div>
             <div class="fag-element">
                 <img src="assets/imgs/matte_s/matte_s_placeholder.png" class="fag-bilde">
