--- a/programfag/kjemi/index.html
+++ b/programfag/kjemi/index.html
@@ -91,7 +91,7 @@
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
                     <img src="../../assets/imgs/kjemi/atomikon.png" alt="Person som driver med kjemi">
-                    <img src="../../assets/imgs/kjemi/placeholder_kjemi.png" alt="Person som driver med kjemi">
+                    <img src="../../assets/imgs/kjemi/periodesystem_brikker.png" alt="Person som driver med kjemi">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
@@ -175,8 +175,8 @@
                     </p>
                 </div>
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/kjemi/placeholder_kjemi.png" alt="Person som driver med kjemi">
-                    <img src="../../assets/imgs/kjemi/placeholder_kjemi.png" alt="Person som driver med kjemi">
+                    <img src="../../assets/imgs/kjemi/blå_kjemigreie.png" alt="Person som driver med kjemi">
+                    <img src="../../assets/imgs/kjemi/atomikon_rød.png" alt="Person som driver med kjemi">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
