La til sider om R og S-matte

--- a/programfag/fysikk/index.html
+++ b/programfag/fysikk/index.html
@@ -91,7 +91,7 @@
                     <p>
                         <i>
                             "Du kan jo spørre noen andre, da. Ooog jeg ville ikke brukt det derre, 
-                            for det er ikke et ordentlig sitt. Vi prøver å være profesjonelle, Sondre"
+                            for det er ikke et ordentlig sitat. Vi prøver å være profesjonelle, Sondre"
                         </i>
                     </p>
                     <p>
@@ -163,14 +163,12 @@
                     <h3>Hva mener elevene?</h3>
                     <p>
                         <i>
-                            "Kjemi er et spennende fag, med mye utfordringer. Det som er bra med faget er at man 
-                            får nyttig kunnskap, samtidig som at det er preget av mye praktisk arbeid hvor du kan 
-                            se selv hva som faktisk skjer og ikke bare lese om det. Dermed blir det ikke like 
-                            kjedelig og man får økt forståelse for faget."
+                            "Du kan jo spørre noen andre, da. Ooog jeg ville ikke brukt det derre, 
+                            for det er ikke et ordentlig sitat. Vi prøver å være profesjonelle, Sondre"
                         </i>
                     </p>
                     <p>
-                        - Tidligere elev
+                        - Fremtidig elev
                     </p>
                 </div>
                 <div class="mer-informasjon">
