Prøvde å fikse bilder fra timen i kjemi
Nei, ting gikk ikke bra.

--- a/programfag/geofag/index.html
+++ b/programfag/geofag/index.html
@@ -158,6 +158,8 @@
         <!-- legg til flere prosjekter her -->
         <div class="flere-prosjekter">
             <h3>Flere prosjekter</h3>
+            <p>Her er en minifilm om Natalie og Stine sitt feltarbeid i 2020 som vant Junior Vannpris!</p>
+            <a href="https://www.youtube.com/watch?v=MNb5IhX_Rlk" target="_blank">Se videoen her</a>
         </div>
     </main>
     <!-- Footer -->
